UPDATE 4.0 openModal() and closeModal() functions -> fixed Modal close button bug for register events and updated responsiveness. Added Event 10, deleted extra assets, deleted duplicated get_info() function from event_create.js. Deleted username validation for register modal, email and password validation & error messages for login modal, moved isNullorWhiteSpace, cleared all error messages, added scan_QR function to handle the post request.

--- a/css/modal.css
+++ b/css/modal.css
@@ -277,13 +277,19 @@
   padding-right:(.5rem, 1.5rem, 2.5rem);
 }
 
+.teamName-input{
+  width: 100%;
+  min-width: 200px;
+}
+
 .member-no-modal{
-  width: 10%; 
+  width: 8%; 
   min-width: 40px ;
 }
 
 .email-input-modal{
-  width: 80%;
+  width: 70%;
+  min-width: 200px;
 }
 
 @media (max-width: 750px) {
@@ -298,8 +304,16 @@
   .close-button-color{
     fill: #000;
   }
-  
+
   .email-input-modal{
-    width: clamp(30%, 70%, 70%) !important;
+    width: 60%;
+    min-width: 150px;
+  }
+}
+
+@media (max-width: 360px) {
+  .email-input-modal{
+    width: 40%;
+    min-width: 140px;
   }
 }
